# trianglelite

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  deploy.yml
cmake/: Catch2.cmake  Eigen3.cmake  MshIO.cmake  fmt.cmake  nanobind.cmake  sanitizer-cmake.cmake  triangle.cmake
include/trianglelite/: Config.h  Engine.h  common.h  trianglelite.h
python/: pytrianglelite.cpp
python/trianglelite/: __init__.py  __init__.pyi
src/: Engine.cpp
tests/: test_engine.cpp
