build-backend = "setuptools.build_meta"

[build-system]
requires = [
    "scikit-build-core~=0.9.1",
]
build-backend = "scikit_build_core.build"

[project]
name = "trianglelite"
maintainers = [{name = "Qingnan Zhou", email = "qnzhou@gmail.com"}]
description = "A lite wrapper around Shewchuk's triangle."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.scikit-build]
install.components = ["TriangleLite_Python_Runtime"]
wheel.packages = ["python/trianglelite"]
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
TRIANGLELITE_PYTHON = true

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "python/trianglelite/__init__.py"
